2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/mm.c (grub_memalign): Don't define if there is no
	implementation available to cause compile-time rather than runtime
	error.

2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c: Don't check for symlinks on windows.

2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* INSTALL: Mention unavailability of man pages when cross-compiling.

2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/crypto.h: Don't declare gcry_log_bug, gcry_log_printf
	and gcry_log_bug.
	* grub-core/lib/libgcrypt_wrap/mem.c: Include g10lib.h

2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* INSTALL: Document cross-compilation.
	* acinclude.m4: Determine whether nm support -P and --defined-only.
	* configure.ac: Add TARGET_ to all variables pertaining to target
	that don't have it yet.
	* gentpl.py: Likewise.
	* grub-core/Makefile.am: Likewise.
	* grub-core/genmod.sh.in: Likewise.
	* grub-core/gensyminfo.sh.in: Handle OpenBSD and other non-GNU nm
	as well.

2013-08-21  Ilya Bakulin <Ilya_Bakulin@genua.de>

	* configure.ac: Remove -Wempty-body. It's not essential and needs
	recent gcc.

2013-08-21  Ilya Bakulin <Ilya_Bakulin@genua.de>

	* grub-core/kern/emu/hostdisk.c: Add conditionals for OpenBSD.
	* util/getroot.c: Likewise.

2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c: Add needed explicit cast.
	* grub-core/lib/backtrace.c: Likewise.
	* grub-core/net/ip.c: Likewise.
	* grub-core/net/tcp.c: Likewise.
	* grub-core/net/udp.c: Likewise.

2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/wchar.h: Fix typo.

2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/import_gcry.py: Add final newline in visibility.h.

2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common: Fix typo.

2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>
