@@ -1,5 +1,10 @@
 2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/zfs/spa.h (zio_cksum): Add explicit members for mac.
+	* grub-core/fs/zfs/zfs.c (zio_read): Don't use casts to retrieve mac.
+
+2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/kern/emu/mm.c (grub_memalign): Don't define if there is no
 	implementation available to cause compile-time rather than runtime
 	error.
